    -> Nested protocols currently don't allow the protocol options which global protocols can have due to a shift-reduce conflict, which may be something to consider changing.
    -> Global protocols cannot have dynamic participants, while nested protocols can.


> protocol.ml:
  - I added a separate function to validate that all protocol calls are valid, because the existing function also performed the expanding of protocol calls (the 'do' construct)
    -> Nested protocols can only be called using the 'calls' construct, and the 'do' construct is reserved for calling global protocols. This means that global protocols and nested protocols can have the same name, because the construct used to call the protocol will determine which protocol is called.
    
    -> Protocol declarations introduce new scopes which means nested protocols defined within a protocol cannot be called from outside that protocol.
    
    -> Defining a nested protocol with the same name as a nested protocol in a parent scope overrides the previous definition in that scope and all its subscopes. Global protocol declarations cannot be shadowed, because they can only be defined in the top-level.

  - I also defined a function for renaming all the protocols to ensure that protocol names are globally unique. This makes it possible to generate a flattened representation of the global type once all naming conflicts between protocols in different scopes have been resolved.

> symtable.ml
  - I implemented a symbol table to verify that all protocol calls were valid by keeping track of all the protocols defined in each scope. I don't think it is really necessary now, as I have implemented similar logic in other parts of the codebase, but currently it is still used for protocol validation.

> gtype.ml:
  - I introduced a new 'calls' construct for making protocol calls in the global type. 
  